tests/Tree/negative/test015.jvt
-- calling unsupported anoma-sign-detached

function main() : * {
  anoma-sign-detached(1,2)
}
